# dwmblocks

./: CMakeLists.txt  blocks.def.h  blocks.h  dwmblocks  dwmblocks.c
